--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
 
 
     <ion-avatar [routerLink]="['/inicio']" >
-      <ion-img [src]="titulo" class="ion-align-self-center"></ion-img>
+      <ion-img src="assets/shapes.svg" class="ion-align-self-center"></ion-img>
     </ion-avatar>
 
     <ion-buttons slot="end">
