--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -1,4 +1,14 @@
 
+ion-icon{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 ion-avatar{
   margin:10px auto;
+}
+
+.imgInicio{
+  margin-left: 5px;
+  margin-right: 10px;
 }
