--- a/src/app/pages/inicio/inicio.page.scss
+++ b/src/app/pages/inicio/inicio.page.scss
@@ -2,6 +2,11 @@ ion-avatar{
   margin:0 auto;
 }
 
+img{
+  width: 350px;
+  height: 350px;
+}
+
 ion-fab-button {
   --background: #b7f399;
   --background-activated: #87d361;
